<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="top|left"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popup_quote_000"
    android:background="@drawable/popup_stock_001"
    tools:ignore="RtlHardcoded">

    <TextView
        android:id="@+id/name_000"
        android:text="@string/seek_002"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/symbol_000"
        android:text="@string/seek_003"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="30dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/lprice_000"
            android:text="@string/seek_004"
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"/>

        <TextView
            android:id="@+id/change_000"
            android:text="@string/seek_005"
            android:textSize="21sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left" />

    </TableRow>

    <TextView
        android:id="@+id/time_000"
        android:text="@string/popup_002"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="30dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/time_001"
            android:text="@string/seek_007"
            android:textSize="16sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            tools:ignore="RtlHardcoded" />

    </TableRow>

    <TextView
        android:id="@+id/marketcap_000"
        android:text="@string/popup_001"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/marketcap_001"
            android:text="@string/seek_009"
            android:textSize="20sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            tools:ignore="RtlHardcoded" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/volume_000"
            android:text="@string/seek_010"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"/>

        <TextView
            android:id="@+id/volume_001"
            android:text="@string/seek_010"
            android:textSize="20sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left" />

    </TableRow>

    <TextView
        android:id="@+id/ytdTitle_000"
        android:text="@string/popup_000"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="30dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/ytd_000"
            android:text="@string/seek_011"
            android:textSize="21sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"/>

        <TextView
            android:id="@+id/ytdchange_000"
            android:text="@string/seek_011"
            android:textSize="21sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/high_000"
            android:text="@string/seek_013"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"/>

        <TextView
            android:id="@+id/high_001"
            android:text="@string/seek_013"
            android:textSize="21sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/low_000"
            android:text="@string/seek_014"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"/>

        <TextView
            android:id="@+id/low_001"
            android:text="@string/seek_014"
            android:textSize="21sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/open_000"
            android:text="@string/seek_015"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"/>

        <TextView
            android:id="@+id/open_001"
            android:text="@string/seek_015"
            android:textSize="21sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left" />

    </TableRow>

    <Button
        android:id="@+id/button_pop_00"
        android:onClick="closeStock"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_button"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>